--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,8 +36,9 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\SpawnFood.cs" />
+     <Compile Include="Assets\Scripts\GlobalManager.cs" />
      <Compile Include="Assets\Scripts\Snake.cs" />
+     <Compile Include="Assets\Scripts\SpawnFood.cs" />
     <Reference Include="UnityEngine">
         <HintPath>E:/unity/2021.1.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
