--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -39,6 +39,7 @@
      <Compile Include="Assets\Scripts\GlobalManager.cs" />
      <Compile Include="Assets\Scripts\Snake.cs" />
      <Compile Include="Assets\Scripts\SpawnFood.cs" />
+     <Compile Include="Assets\Scripts\DetectSnake.cs" />
     <Reference Include="UnityEngine">
         <HintPath>E:/unity/2021.1.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
