增加了小怪物游走

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,9 +37,10 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\GlobalManager.cs" />
-     <Compile Include="Assets\Scripts\DetectSnake.cs" />
      <Compile Include="Assets\Scripts\Snake.cs" />
      <Compile Include="Assets\Scripts\SpawnFood.cs" />
+     <Compile Include="Assets\Scripts\EnemyMove.cs" />
+     <Compile Include="Assets\Scripts\FoodDetector.cs" />
     <Reference Include="UnityEngine">
         <HintPath>E:/unity/2021.1.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
